src/test/resources/mutation/error/mutationTypeWithoutID/schema.graphqls
input EndreInput @record(table : "PERSON") {
  fornavn: String
  privatEpost: String @column(name : "EMAILADRESSE_PRIVAT")
}

type Mutation {
  endrePersonWithoutID(input: EndreInput!): ID! @mutationType(typeName: UPDATE)
}
